2008-02-19	Dmitry Dulepov <dmitry@typo3.org>

	* Added search hooks
	* Extension version is manually set to 2.5.1

2008-02-13	Dmitry Dulepov <dmitry@typo3.org>

	* Fixed bug #7485: Function menu in module Web > Info does not redirect anymore when selecting tt_news category manager
	* Fixed bug #6881: Division by zero
	* Fixed bug #6671: XClassing of class.tx_ttnews_catmenu.php does not work

2008-01-28	Dmitry Dulepov <dmitry@typo3.org>

	* Fixed CSS layout problem with tt_news_remplate_v2.html on FireFox

2008-01-08	Dmitry Dulepov <dmitry@typo3.org>

	* Added section about tt_news add-ons to the manual

2007-02-28	Rupert Germann <rupi@gmx.li>

	* updated function indexes - no actual code changes
	* uploaded revised manual (Thanx Ben)
	* version 2.5.0

2007-02-20	Rupert Germann <rupi@gmx.li>

	* fixed a small bug which caused asc/desc from Flexform to be ignored if a value for 'listOrderBy' was present in TS. Thx to Ernesto for the hint.

2007-02-19	Ingo Renner <typo3@ingo-renner.com>

	* new feature: RSS 2.0 feeds displaying full length news records now, credits Michael Feinbier

2007-02-18	Ingo Renner <typo3@ingo-renner.com>

	* new feature: list view can select news for a certain day only now - to play nice with TIMTAB (bug #2941)
	* new feature: RSS 2.0 feeds deliver files attached to news records as <enclosure>s (feature request #4950)

2007-02-15	Rupert Germann <rupi@gmx.li>

	* fixed a small bug in function getSubCategoriesForMenu which caused tt_news to display only 50 subcategories-
	* updated the manual with the new features

2007-02-09	Rupert Germann <rupi@gmx.li>

	* fix for bug 4948: in TYPO3 4.1 a cHash error occured when links to related news were clicked (thx to Oliver Hader).
	* fix: added a condition to ext_tables.php which disables the "tt_news category manager" module in TYPO versions below 4.0 (reason: the drag and drop code isn't present in these versions)

2007-01-26	Rupert Germann <rupi@gmx.li>
